--- a/.editorconfig
+++ b/.editorconfig
@@ -12,7 +12,7 @@ insert_final_newline = true
 indent_style = space
 indent_size = 4
 
-[*.{html,js,css,coffee,styl}]
+[*.{html,js,css,coffee,styl,json}]
 indent_style = space
 indent_size = 2
 
