--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "css-loader": "^0.9.0",
     "gulp": "^3.8.8",
     "gulp-clean": "^0.3.1",
+    "gulp-coffee": "^2.2.0",
     "gulp-rename": "^1.2.0",
     "gulp-webpack": "git://github.com/tonyseek/gulp-webpack#entry-name",
     "merge-stream": "^0.1.6",
