--- a/.gitignore
+++ b/.gitignore
@@ -6,17 +6,17 @@
 # Packages
 *.egg
 *.egg-info
-dist
-build
-eggs
-parts
-bin
-var
-sdist
+/dist
+/build
+/eggs
+/parts
+/sdist
+/bin
+/var
+/lib
+/lib64
 develop-eggs
 .installed.cfg
-lib
-lib64
 __pycache__
 node_modules
 
