--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pastry",
   "dependencies": {
+    "extract-text-webpack-plugin": "^0.3.1",
     "jquery": "^2.1.1"
   },
   "devDependencies": {
