--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "pastry",
   "dependencies": {
     "extract-text-webpack-plugin": "^0.3.1",
-    "jquery": "^2.1.1"
+    "jquery": "^2.1.1",
+    "purecss": "^0.5.0"
   },
   "devDependencies": {
     "coffee-script": "^1.8.0",
