--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "purecss": "^0.5.0"
   },
   "devDependencies": {
+    "coffee-loader": "^0.7.2",
     "coffee-script": "^1.8.0",
     "css-loader": "^0.9.0",
     "gulp": "^3.8.8",
     "gulp-clean": "^0.3.1",
     "gulp-coffee": "^2.2.0",
+    "gulp-filter": "^1.0.2",
     "gulp-rename": "^1.2.0",
     "gulp-webpack": "git://github.com/tonyseek/gulp-webpack#entry-name",
     "merge-stream": "^0.1.6",
