--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "gulp-webpack": "git://github.com/tonyseek/gulp-webpack#entry-name",
     "merge-stream": "^0.1.6",
     "style-loader": "^0.8.1",
-    "webpack": "^1.4.5"
+    "webpack": "^1.4.5",
+    "yargs": "^1.3.2"
   },
   "scripts": {
     "prepublish": "gulp build"
