--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "gulp-coffee": "^2.2.0",
     "gulp-filter": "^1.0.2",
     "gulp-rename": "^1.2.0",
-    "gulp-webpack": "git://github.com/tonyseek/gulp-webpack#entry-name",
+    "gulp-webpack": "^1.0.0",
     "merge-stream": "^0.1.6",
     "style-loader": "^0.8.1",
+    "vinyl-named": "^1.1.0",
     "webpack": "^1.4.5",
     "yargs": "^1.3.2"
   },
