--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.8.0",
     "css-loader": "^0.9.0",
+    "del": "^0.1.3",
     "gulp": "^3.8.8",
-    "gulp-clean": "^0.3.1",
-    "gulp-coffee": "^2.2.0",
-    "gulp-filter": "^1.0.2",
     "gulp-rename": "^1.2.0",
     "gulp-webpack": "^1.0.0",
     "style-loader": "^0.8.1",
