--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "gulp": "^3.8.8",
     "gulp-rename": "^1.2.0",
     "gulp-webpack": "^1.0.0",
+    "nib": "^1.0.4",
     "style-loader": "^0.8.1",
+    "stylus-loader": "^0.4.0",
     "vinyl-named": "^1.1.0",
     "webpack": "^1.4.5",
     "yargs": "^1.3.2"
