--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "del": "^0.1.3",
     "gulp": "^3.8.8",
     "gulp-rename": "^1.2.0",
+    "gulp-stylus": "^1.3.3",
     "gulp-webpack": "^1.0.0",
     "nib": "^1.0.4",
     "style-loader": "^0.8.1",
