add IRC channel to receive travis-ci notifications.

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,9 @@ script:
 branches:
   only:
     - master
+notifications:
+  irc:
+    - "chat.freenode.net#szulabs"
 deploy:
   provider: releases
   file:
