--- a/.travis.yml
+++ b/.travis.yml
@@ -27,5 +27,6 @@ deploy:
   on:
     repo: szulabs/pastry
     tags: true
+    all_branches: true
   api_key:
     secure: QCCN9cooxjwTvXVLrjwZQWBkMhJ1Py07G/4tjNxa0AJNEK3hl4ZtCoDXB54QYVD6JNMpghojEAa6fLAN2gnhnHzcTmDHXMlKGtLnJSipPT17EVtR8Oh8rRbvpRA/d/Sq6uexBfT+uXru7hOM+B940CibMaeTwelBk8a2AY4Rk+w=
