--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "purecss": "^0.5.0"
   },
   "devDependencies": {
+    "browser-sync": "^1.6.2",
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.8.0",
     "css-loader": "^0.9.0",
