--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "css-loader": "^0.9.0",
     "del": "^0.1.3",
     "gulp": "^3.8.8",
+    "gulp-plumber": "^0.6.6",
     "gulp-rename": "^1.2.0",
     "gulp-stylus": "^1.3.3",
     "gulp-webpack": "^1.0.0",
