--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ PASTRY_SECRET_KEY='y-o#un0qcb@r8#xwvb@419&#4i$9%1r0%th4bdwo_n#(z_y2o+'
 PASTRY_DATABASE_URI='postgresql://postgres@localhost:5432/pastry'
 PASTRY_STATIC_ROOT='build/static'
 PASTRY_STATICFILES_STORAGE='django.contrib.staticfiles.storage.ManifestStaticFilesStorage'
+PASTRY_ALLOWED_HOSTS='127.0.0.1:szulabs.org'
