--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include README.md LICENSE requirements.txt tox.ini
+recursive-include pastry *.html
 recursive-include pastry/static *.css
 recursive-include pastry/static *.js
 recursive-include pastry/static *.svg
