--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ PASTRY_DATABASE_URI='postgresql://postgres@localhost:5432/pastry'
 PASTRY_STATIC_ROOT='build/static'
 PASTRY_STATICFILES_STORAGE='django.contrib.staticfiles.storage.ManifestStaticFilesStorage'
 PASTRY_ALLOWED_HOSTS='127.0.0.1:szulabs.org'
+PASTRY_RAVEN_DSN='http://key:secret@example.com/1'
